# weather-cli

./: .gitignore  README.md  main.py  pyproject.toml
client/: client.py
config/: config.py
release/: weathercli-1.0.16-py3-none-any.whl
src/: weathercli.py
src/client/: client.py
src/config/: config.py
src/output/: output.py
